--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    padding: 10px 15px 30px;
+    padding: 10px 10px 25px;
 }
 
 .company {
@@ -33,9 +33,12 @@ header {
 }
 
 .main {
+    height: 500px;
     display: grid;
-    grid-template-columns: 7fr 3fr 4fr 7fr;
-    grid-template-rows: 7% 50% 15% 10% 10% 7%;
+    grid-template-columns: 30% 15% 30% 25%
+        /*7fr 3fr 4fr 7fr*/
+    ;
+    grid-template-rows: 2.5% 58% 15% 11% 11% 2.5%;
 }
 
 .main__img {
@@ -58,7 +61,7 @@ header {
     grid-row-end: 4;
     font-size: 4.5vw;
     font-weight: 300;
-    padding-top: 5px;
+    padding: 5px 0 0 0;
 }
 
 .main__content {
