--- a/style.css
+++ b/style.css
@@ -33,12 +33,10 @@ header {
 }
 
 .main {
-    height: 500px;
+    height: 640px;
     display: grid;
-    grid-template-columns: 30% 15% 30% 25%
-        /*7fr 3fr 4fr 7fr*/
-    ;
-    grid-template-rows: 2.5% 58% 15% 11% 11% 2.5%;
+    grid-template-columns: max-content 1fr 2fr 2fr;
+    grid-template-rows: 0.5fr 5fr max-content 1fr 1fr 0.5fr;
 }
 
 .main__img {
